--- a/Conversa/es.lproj/Login.storyboard
+++ b/Conversa/es.lproj/Login.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="j4U-Hu-sUX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="j4U-Hu-sUX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -68,7 +68,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="P9n-em-FKa"/>
-                                    <constraint firstAttribute="width" constant="170" id="fcI-0j-511"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="fcI-0j-511"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <inset key="contentEdgeInsets" minX="12" minY="7" maxX="12" maxY="7"/>
@@ -217,7 +217,7 @@
                                         <rect key="frame" x="102.5" y="113" width="170" height="40"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="170" id="wVg-yh-0jy"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="wVg-yh-0jy"/>
                                             <constraint firstAttribute="height" constant="40" id="y4M-50-dqd"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -247,7 +247,7 @@
                                         <rect key="frame" x="102.5" y="190" width="170" height="40"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="170" id="9c2-B9-I5h"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="9c2-B9-I5h"/>
                                             <constraint firstAttribute="height" constant="40" id="MsX-a7-k73"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -278,7 +278,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿YA TENGO UNA CUENTA?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpd-vs-cjw">
                                         <rect key="frame" x="87.5" y="168" width="200" height="15"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="Jpr-DE-SkJ"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Jpr-DE-SkJ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                         <color key="textColor" red="0.31372549020000001" green="0.31372549020000001" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -287,7 +287,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿ERES NUEVO AQUÍ?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9hh-md-WFT">
                                         <rect key="frame" x="87.5" y="91" width="200" height="15"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="a2J-kM-vS4"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="a2J-kM-vS4"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                         <color key="textColor" red="0.31372549020000001" green="0.31372549020000001" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -441,7 +441,7 @@
                                                         <rect key="frame" x="80.5" y="172" width="170" height="40"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="170" id="FPd-lr-ocE"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="FPd-lr-ocE"/>
                                                             <constraint firstAttribute="height" constant="40" id="SqE-1Y-pBg"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -484,6 +484,7 @@
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="7h7-o2-ked" firstAttribute="centerX" secondItem="C4V-kf-xJO" secondAttribute="centerX" id="1yj-XB-EKP"/>
+                                                    <constraint firstItem="Pcx-e8-8g5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="C4V-kf-xJO" secondAttribute="leading" constant="20" symbolic="YES" id="3FY-UC-qkD"/>
                                                     <constraint firstItem="9w2-oF-t3B" firstAttribute="leading" secondItem="C4V-kf-xJO" secondAttribute="leading" id="DXC-CG-3KD"/>
                                                     <constraint firstItem="9w2-oF-t3B" firstAttribute="top" secondItem="C4V-kf-xJO" secondAttribute="top" id="E58-xx-sqi"/>
                                                     <constraint firstAttribute="trailing" secondItem="C4U-80-DYf" secondAttribute="trailing" id="MI4-nS-WQQ"/>
@@ -659,9 +660,9 @@
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                                             </textField>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="K5c-pu-Cir">
-                                                <rect key="frame" x="52.5" y="293" width="270" height="29"/>
+                                                <rect key="frame" x="52.5" y="290.5" width="270" height="29"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="270" id="T3N-Pp-tsd"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="270" id="T3N-Pp-tsd"/>
                                                 </constraints>
                                                 <segments>
                                                     <segment title="MUJER"/>
@@ -671,10 +672,10 @@
                                                 <color key="tintColor" red="0.023529411764706" green="0.94901960784313699" blue="0.56078431372548998" alpha="1" colorSpace="calibratedRGB"/>
                                             </segmentedControl>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjJ-Um-6C4" customClass="UIStateButton">
-                                                <rect key="frame" x="102.5" y="357" width="170" height="40"/>
+                                                <rect key="frame" x="102.5" y="346.5" width="170" height="40"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="170" id="7nY-bQ-Lzi"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="7nY-bQ-Lzi"/>
                                                     <constraint firstAttribute="height" constant="40" id="OEd-Ta-mAN"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -700,20 +701,14 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AL REGISTRARTE ESTAS ACEPTANDO NUESTROS TÉRMINOS Y POLÍTICAS DE PRIVACIDAD" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxx-4P-X2D" customClass="TTTAttributedLabel">
-                                                <rect key="frame" x="59" y="425" width="258.5" height="26.5"/>
+                                                <rect key="frame" x="59" y="414.5" width="258.5" height="26.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                                                 <color key="textColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opcional" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqU-hi-Wk8">
-                                                <rect key="frame" x="160.5" y="269" width="54" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opcional" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Law-xD-tFT">
-                                                <rect key="frame" x="160.5" y="323" width="54" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <rect key="frame" x="164.5" y="269" width="46.5" height="13.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -729,18 +724,15 @@
                                             <constraint firstItem="UjJ-Um-6C4" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="S9P-js-9BC"/>
                                             <constraint firstItem="hqU-hi-Wk8" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="VWq-XR-FK5"/>
                                             <constraint firstItem="zxx-4P-X2D" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="aaN-6a-hRd"/>
-                                            <constraint firstItem="Law-xD-tFT" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="cno-hB-tsM"/>
                                             <constraint firstItem="iCN-IM-3Em" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="eNW-JJ-L7t"/>
                                             <constraint firstItem="P3y-k6-V04" firstAttribute="top" secondItem="FWB-wP-8mY" secondAttribute="bottom" id="i7g-PT-uuB"/>
-                                            <constraint firstItem="UjJ-Um-6C4" firstAttribute="top" secondItem="K5c-pu-Cir" secondAttribute="bottom" constant="36" id="kE0-u0-ujH"/>
+                                            <constraint firstItem="UjJ-Um-6C4" firstAttribute="top" secondItem="K5c-pu-Cir" secondAttribute="bottom" constant="28" id="kE0-u0-ujH"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="iCN-IM-3Em" secondAttribute="trailing" constant="14" id="lJQ-Xh-hch"/>
                                             <constraint firstItem="P3y-k6-V04" firstAttribute="leading" secondItem="UhO-8B-uJ4" secondAttribute="leadingMargin" constant="14" id="leb-ns-JPb"/>
-                                            <constraint firstItem="UjJ-Um-6C4" firstAttribute="top" secondItem="Law-xD-tFT" secondAttribute="bottom" constant="18" id="lx1-vO-ivO"/>
                                             <constraint firstItem="zxx-4P-X2D" firstAttribute="top" secondItem="UjJ-Um-6C4" secondAttribute="bottom" constant="28" id="omm-2q-3l4"/>
                                             <constraint firstItem="K5c-pu-Cir" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="rMc-72-Ls2"/>
                                             <constraint firstItem="FWB-wP-8mY" firstAttribute="top" secondItem="UhO-8B-uJ4" secondAttribute="top" constant="108" id="s0U-dJ-WSl"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="P3y-k6-V04" secondAttribute="trailing" constant="14" id="wPY-mz-4iJ"/>
-                                            <constraint firstItem="Law-xD-tFT" firstAttribute="top" secondItem="K5c-pu-Cir" secondAttribute="bottom" constant="2" id="xey-Cs-ztZ"/>
                                         </constraints>
                                     </view>
                                 </subviews>
