--- a/Conversa/Base.lproj/Login.storyboard
+++ b/Conversa/Base.lproj/Login.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="j4U-Hu-sUX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="j4U-Hu-sUX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -68,7 +68,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="P9n-em-FKa"/>
-                                    <constraint firstAttribute="width" constant="170" id="fcI-0j-511"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="fcI-0j-511"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <inset key="contentEdgeInsets" minX="12" minY="7" maxX="12" maxY="7"/>
@@ -217,7 +217,7 @@
                                         <rect key="frame" x="102.5" y="113" width="170" height="40"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="170" id="wVg-yh-0jy"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="wVg-yh-0jy"/>
                                             <constraint firstAttribute="height" constant="40" id="y4M-50-dqd"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -247,7 +247,7 @@
                                         <rect key="frame" x="102.5" y="190" width="170" height="40"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="170" id="9c2-B9-I5h"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="9c2-B9-I5h"/>
                                             <constraint firstAttribute="height" constant="40" id="MsX-a7-k73"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -278,7 +278,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ALREADY HAVE AN ACCOUNT?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpd-vs-cjw">
                                         <rect key="frame" x="87.5" y="168" width="200" height="15"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="Jpr-DE-SkJ"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Jpr-DE-SkJ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                         <color key="textColor" red="0.31372549020000001" green="0.31372549020000001" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -287,7 +287,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ARE YOU NEW HERE?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9hh-md-WFT">
                                         <rect key="frame" x="87.5" y="91" width="200" height="15"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="a2J-kM-vS4"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="a2J-kM-vS4"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                         <color key="textColor" red="0.31372549020000001" green="0.31372549020000001" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -441,7 +441,7 @@
                                                         <rect key="frame" x="80.5" y="172" width="170" height="40"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="170" id="FPd-lr-ocE"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="FPd-lr-ocE"/>
                                                             <constraint firstAttribute="height" constant="40" id="SqE-1Y-pBg"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -495,6 +495,7 @@
                                                     <constraint firstItem="C4U-80-DYf" firstAttribute="height" secondItem="9w2-oF-t3B" secondAttribute="height" id="fNq-jl-18Q"/>
                                                     <constraint firstItem="7h7-o2-ked" firstAttribute="top" secondItem="Pcx-e8-8g5" secondAttribute="bottom" constant="36" id="sfk-Cj-5Ul"/>
                                                     <constraint firstAttribute="trailing" secondItem="Pcx-e8-8g5" secondAttribute="trailing" id="tQd-T1-khv"/>
+                                                    <constraint firstItem="Pcx-e8-8g5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="C4V-kf-xJO" secondAttribute="leading" constant="20" symbolic="YES" id="zWt-0G-z2V"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -659,7 +660,7 @@
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                                             </textField>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="K5c-pu-Cir">
-                                                <rect key="frame" x="58" y="293" width="260" height="29"/>
+                                                <rect key="frame" x="58" y="290.5" width="260" height="29"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="260" id="T3N-Pp-tsd"/>
                                                 </constraints>
@@ -671,7 +672,7 @@
                                                 <color key="tintColor" red="0.023529411764706" green="0.94901960784313699" blue="0.56078431372548998" alpha="1" colorSpace="calibratedRGB"/>
                                             </segmentedControl>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjJ-Um-6C4" customClass="UIStateButton">
-                                                <rect key="frame" x="102" y="360" width="170" height="40"/>
+                                                <rect key="frame" x="102" y="346.5" width="170" height="40"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="170" id="7nY-bQ-Lzi"/>
@@ -700,20 +701,14 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BY SIGNING UP YOU ARE ACCEPTING OUR TERMS AND PRIVACY POLICIES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxx-4P-X2D" customClass="TTTAttributedLabel">
-                                                <rect key="frame" x="90" y="428" width="196" height="26.5"/>
+                                                <rect key="frame" x="90" y="414.5" width="196" height="26.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                                                 <color key="textColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optional" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cny-MW-ebq">
-                                                <rect key="frame" x="161.5" y="269" width="51" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optional" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J9R-rg-t6Y">
-                                                <rect key="frame" x="161.5" y="323" width="51" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <rect key="frame" x="165" y="269" width="44.5" height="13.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -724,16 +719,14 @@
                                             <constraint firstItem="iCN-IM-3Em" firstAttribute="leading" secondItem="UhO-8B-uJ4" secondAttribute="leadingMargin" constant="14" id="9if-T9-aB4"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="FWB-wP-8mY" secondAttribute="trailing" constant="14" id="QRN-X7-MnQ"/>
                                             <constraint firstItem="FWB-wP-8mY" firstAttribute="leading" secondItem="UhO-8B-uJ4" secondAttribute="leadingMargin" constant="14" id="R8d-q6-yJS"/>
-                                            <constraint firstItem="J9R-rg-t6Y" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="RMF-h3-5Ih"/>
                                             <constraint firstItem="UjJ-Um-6C4" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="S9P-js-9BC"/>
                                             <constraint firstItem="cny-MW-ebq" firstAttribute="top" secondItem="iCN-IM-3Em" secondAttribute="bottom" constant="2" id="Zsf-o1-LKq"/>
                                             <constraint firstItem="zxx-4P-X2D" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="aaN-6a-hRd"/>
                                             <constraint firstItem="iCN-IM-3Em" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="eNW-JJ-L7t"/>
+                                            <constraint firstItem="UjJ-Um-6C4" firstAttribute="top" secondItem="K5c-pu-Cir" secondAttribute="bottom" constant="28" id="ezB-jP-aS0"/>
                                             <constraint firstItem="P3y-k6-V04" firstAttribute="top" secondItem="FWB-wP-8mY" secondAttribute="bottom" id="i7g-PT-uuB"/>
-                                            <constraint firstItem="UjJ-Um-6C4" firstAttribute="top" secondItem="J9R-rg-t6Y" secondAttribute="bottom" constant="21" id="ksr-gC-ggO"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="iCN-IM-3Em" secondAttribute="trailing" constant="14" id="lJQ-Xh-hch"/>
                                             <constraint firstItem="P3y-k6-V04" firstAttribute="leading" secondItem="UhO-8B-uJ4" secondAttribute="leadingMargin" constant="14" id="leb-ns-JPb"/>
-                                            <constraint firstItem="J9R-rg-t6Y" firstAttribute="top" secondItem="K5c-pu-Cir" secondAttribute="bottom" constant="2" id="lyI-z0-nkv"/>
                                             <constraint firstItem="zxx-4P-X2D" firstAttribute="top" secondItem="UjJ-Um-6C4" secondAttribute="bottom" constant="28" id="omm-2q-3l4"/>
                                             <constraint firstItem="K5c-pu-Cir" firstAttribute="centerX" secondItem="UhO-8B-uJ4" secondAttribute="centerX" id="rMc-72-Ls2"/>
                                             <constraint firstItem="FWB-wP-8mY" firstAttribute="top" secondItem="UhO-8B-uJ4" secondAttribute="top" constant="108" id="s0U-dJ-WSl"/>
